--- a/sig_project/geodata/templates/geodata/facultad_list.html
+++ b/sig_project/geodata/templates/geodata/facultad_list.html
@@ -26,6 +26,7 @@
                 <div class="card-body">
                     <strong><h5 id="card-title" class="card-title"></h5></strong>
                     <p id="card-description" class="card-text"></p>
+                    <p id="card-univ" class="card-text"></p>
                     <p id="card-rating"></p>
                     <p id="calificar"></p>
                     <p id="marcar"> 
@@ -44,7 +45,7 @@
                 <div class="accordion-body">
                     <!-- Filtros -->
                     <div class="filter-section">
-                        <form method="get" class="mb-4">
+                        <form method="get" class="mb-4" id="buscar-form">
                             <div class="row">
                                 <div class="col-md-4" style="width: 100%;">
                                     <input type="text" name="nombre" class="form-control" placeholder="Buscar por nombre" value="{{ request.GET.nombre }}">
@@ -71,10 +72,6 @@
   
 
 
-
-
-
-
 <script>
 
     var facultades = {{ facultades_json|safe }};
@@ -82,7 +79,7 @@
 
     // Cargar la capa base
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 18,
+    maxZoom: 20,
     }).addTo(map);
 
     let selectedMarker = null;
@@ -90,12 +87,26 @@
     const markerGroup = L.layerGroup().addTo(map);
     const publicasLayer = L.layerGroup();
     const privadasLayer = L.layerGroup();
+    const iconTodas = '<img src="/media/marker/facultyR.png" style="width: 25px; height: 25px; vertical-align: middle; margin-right: 5px;">';
+    const iconPublicas = '<img src="/media/marker/facultyP.png" style="width: 25px; height: 25px; vertical-align: middle; margin-right: 5px;">';
+    const iconPrivadas = '<img src="/media/marker/facultyS.png" style="width: 25px; height: 25px; vertical-align: middle; margin-right: 5px;">';
 // Mostrar puntos en el mapa
 facultades.forEach(fac => {
     if (fac.latitud && fac.longitud) {
-        const marker = L.marker([fac.latitud, fac.longitud], { icon: fIcon, title: fac.nombre }).addTo(map);
+        const marker = L.marker([fac.latitud, fac.longitud], { icon: fac.universidad === 'pública' ? fIconP : fIcon, title: fac.nombre }).addTo(map);
         marker.on('click', () => showCard(fac));
-        // Añadir el marcador al grupo
+        const popupContent = `
+        <div style="font-size: 12px;">
+            <p>${fac.nombre} 
+            <strong>Universidad:</strong> ${fac.universidad_nom}</p>
+        </div>
+        `;
+        const popup = L.popup({ autoClose: false, closeOnClick: false })
+            .setLatLng([fac.latitud, fac.longitud])
+            .setContent(popupContent);
+
+        marker.bindPopup(popup); 
+
         markerGroup.addLayer(marker);
         if (fac.universidad === "pública") {
         publicasLayer.addLayer(marker);
@@ -105,12 +116,16 @@ facultades.forEach(fac => {
     }
 });
 
+// Añadir el grupo de marcadores al mapa
+markerGroup.addTo(map);
+
 // Mostrar detalles en la tarjeta
 function showCard(fac) {
     document.getElementById('card-info').classList.remove('d-none');
     document.getElementById('card-title').textContent = fac.nombre;
     document.getElementById('card-description').textContent = fac.descripcion;
-    document.getElementById('card-rating').innerHTML  = `${generarEstrellas(fac.calificacion_promedio) || 'No disponible'}<br>`;
+    document.getElementById('card-univ').textContent = fac.universidad_nom;
+    document.getElementById('card-rating').innerHTML  = `${generarEstrellas(fac.calificacion_promedio) || 'No disponible'} ${fac.calificacion_promedio}<br>`;
     const button = document.querySelector('.favorite-btn');
     if (fac.es_favorita){
         document.getElementById('marcar').innerHTML =`
@@ -131,29 +146,27 @@ function showCard(fac) {
     document.getElementById('calificar').innerHTML = `
             <form id="calificacion-form">
                 <div class="row">
+                    <div class="col-md-3">
+                        Calificar
+                    </div>
                     <div class="col-md-9">
                         <div id="calificacion" class="div-cal">
-                            <input type="radio" id="star1" name="calificacion" value="5">
-                            <label for=star1" class="star"></label>
+                            <input type="radio" id="star1" name="calificacion" value="5" onclick="submitCalificacion('${'Facultad'}', ${fac.id})">
+                            <label for="star1" class="star"></label>
 
-                            <input type="radio" id="star2" name="calificacion" value="4">
+                            <input type="radio" id="star2" name="calificacion" value="4" onclick="submitCalificacion('${'Facultad'}', ${fac.id})">
                             <label for="star2" class="star"></label>
 
-                            <input type="radio" id="star3" name="calificacion" value="3">
+                            <input type="radio" id="star3" name="calificacion" value="3" onclick="submitCalificacion('${'Facultad'}', ${fac.id})">
                             <label for="star3" class="star"></label>
 
-                            <input type="radio" id="star4" name="calificacion" value="2">
+                            <input type="radio" id="star4" name="calificacion" value="2" onclick="submitCalificacion('${'Facultad'}', ${fac.id})">
                             <label for="star4" class="star"></label>
 
-                            <input type="radio" id="star5" name="calificacion" value="1">
+                            <input type="radio" id="star5" name="calificacion" value="1" onclick="submitCalificacion('${'Facultad'}', ${fac.id})">
                             <label for="star5" class="star"></label>
                         </div>
                     </div> 
-                    <div class="col-md-3">
-                        <button type="button"class="btn btn-outline-secondary"  onclick="submitCalificacion('${'Facultad'}', ${fac.id})" title="Calificar">
-                            <i class="bx bx-check"></i>
-                            </button>
-                    </div>
                 </div>
             </form>
         `;
@@ -166,19 +179,15 @@ function showCard(fac) {
 map.on('click', function (e) {
     const { lat, lng } = e.latlng;
 
-    // Actualizar campos de latitud y longitud
     document.getElementById('lat-input').value = lat.toFixed(6);
     document.getElementById('lon-input').value = lng.toFixed(6);
     document.getElementById('selected-coordinates').textContent = `Latitud: ${lat.toFixed(6)}, Longitud: ${lng.toFixed(6)}`;
 
-    // Añadir o mover marcador
     if (selectedMarker) {
         selectedMarker.setLatLng([lat, lng]);
     } else {
         selectedMarker = L.marker([lat, lng]).addTo(map);
     }
-
-    // Dibujar o actualizar el círculo de radio
     const radio = parseFloat(document.getElementById('radio-input').value) || 0;
     if (radiusCircle) {
         radiusCircle.setLatLng([lat, lng]);
@@ -188,7 +197,7 @@ map.on('click', function (e) {
             color: 'blue',
             fillColor: '#add8e6',
             fillOpacity: 0.5,
-            radius: radio * 1000, // Convertir km a metros
+            radius: radio * 1000, 
         }).addTo(map);
     }
 });
@@ -197,49 +206,73 @@ map.on('click', function (e) {
 document.getElementById('radio-input').addEventListener('input', function () {
     const radio = parseFloat(this.value) || 0;
     if (radiusCircle) {
-        radiusCircle.setRadius(radio * 1000); // Convertir km a metros
+        radiusCircle.setRadius(radio * 1000); 
     }
 });
 
 
-// Añadir el control de búsqueda
+//control de búsqueda
 const searchControl = new L.Control.Search({
         layer: markerGroup,      
         position: 'topleft',    
-        propertyName: 'title',     // Buscar en la propiedad 'title'
+        propertyName: 'title',     
         zoom: 18,                  
-        marker: false              // No añadir un marcador adicional
+        marker: false              
     });
 
-    // Abrir el popup del marcador encontrado
-    searchControl.on('search:locationfound', function(e) {
-        e.layer.openPopup(); // Abre el popup del marcador encontrado
-    });
-    map.addControl(searchControl);
+// popup del marcador encontrado
+searchControl.on('search:locationfound', function(e) {
+    e.layer.openPopup(); 
+});
+map.addControl(searchControl);
 
-// Crear un control de capas para alternar visibilidad
+// control de capas para alternar visibilidad
 const overlays = {
-    "Todas": markerGroup,
-    "Públicas": publicasLayer,
-    "Privadas": privadasLayer
+    [`${iconTodas} Todas`]: markerGroup,
+    [`${iconPublicas} Públicas`]: publicasLayer,
+    [`${iconPrivadas} Privadas`]: privadasLayer
 };
-L.control.layers(overlays,null, { position: 'topleft',collapsed: true }).addTo(map);
+L.control.layers(overlays,null, { position: 'topleft',collapsed: false }).addTo(map);
+
+// Crear un botón de control para ocultar/mostrar los popups
+const popupToggleControl = L.Control.extend({
+    options: { position: 'topleft' }, 
+
+    onAdd: function(map) {
+        const button = L.DomUtil.create('button', 'leaflet-bar leaflet-control popup-toggle');
+        button.innerHTML = '<i class="bx bx-show"></i> Mostrar Info'; // Ícono inicial de "mostrar"
+        L.DomEvent.on(button, 'click', () => {
+            if (button.innerHTML.includes('bx-hide')) {
+                button.innerHTML = '<i class="bx bx-show"></i> Mostrar Info'; // Cambiar ícono a "ocultar"
+                closePopups(markerGroup);
+                closePopups(publicasLayer);
+                closePopups(privadasLayer);
+            } else {
+                button.innerHTML = '<i class="bx bx-hide"></i> Ocultar Info'; // Cambiar ícono a "mostrar"
+                openPopups(markerGroup);
+                openPopups(publicasLayer);
+                openPopups(privadasLayer);
+            }
+        });
+
+        return button;
+    }
+});
+
+// Añadir el control de ocultar/mostrar popups al mapa
+map.addControl(new popupToggleControl());
 </script>
-
-
-
-
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" style="max-width: 90%;" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">
-            <a href="{% url 'facultad_create' %}" class="btn btn-outline-info" data-bs-toggle="tooltip" data-bs-placement="top" title="Crear nueva">
-                <i class='bx bxs-graduation nav_icon'></i><i class="bx bx-plus"></i>
+          <h4 class="modal-title" id="exampleModalLabel">
+            <a href="{% url 'facultad_create' %}" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Crear nueva">
+                Crear Nueva <i class="bx bx-plus"></i>
             </a>
-          </h5>
+          </h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true" style="font-size: x-large;">&times;</span>
           </button>
