--- a/sig_project/geodata/templates/geodata/public_map.html
+++ b/sig_project/geodata/templates/geodata/public_map.html
@@ -2,62 +2,6 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<style>
-    .form-inline {
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        padding: 10px;
-        background-color: #253564; 
-        box-shadow: 0 0 1em hsla(231, 40%, 51%, 0.736);
-        border-radius: 10px;
-        color: #fffafa;
-    }
-    .form-inline select,
-    .form-inline input,
-    .form-inline button {
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        font-size: 16px;
-    }
-    .form-inline select,
-    .form-inline input {
-        background: #8babd940;
-    }
-    .form-inline button {
-        background-color: #6fa6e096;
-        color: white;
-        cursor: pointer;
-    }
-    .form-inline button:hover {
-        background-color: #0057b3c2;
-    }
-</style>
-<!-- estrellas -->
-<style>
-    .estrellas {
-      position: relative;
-      display: inline-block;
-      font-size: 24px;
-    }
-  
-    /* Fondo de estrellas (estrellas vacías) */
-    .estrellas .estrellas-fondo {
-      color: #e4e5e9; /* Color gris para estrellas vacías */
-    }
-  
-    /* Estrellas rellenas (color amarillo) */
-    .estrellas .estrellas-fraccion {
-      color: #ffc107; /* Color amarillo */
-      position: absolute;
-      top: 0;
-      left: 0;
-      overflow: hidden;
-      white-space: nowrap;
-    }
-  </style>
-
   <!-- Sección 1: Bienvenida -->
   <section class="welcome-section">
     <div class="welcome-overlay">
@@ -69,13 +13,40 @@
     </div>
   </section>
 
+  <div class="container mt-2">
+    <div class="row justify-content-between">
+        <div class="col-12 col-md-4">
+            <div class="stat-card">
+                <div class="number" id="uCount">0</div>
+                <img src="/media/marker/university.png" alt="Universidad Icon">
+                <h2 style="margin-top: 35px; font-size: 1.25rem;">Universidades</h2>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+            <div class="stat-card">
+                <div class="number" id="fCount">0</div>
+                <img src="/media/marker/faculty.png" alt="Facultad Icon">
+                <h2 style="margin-top: 35px; font-size: 1.25rem;">Facultades</h2>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+            <div class="stat-card">
+                <div class="number" id="cCount">0</div>
+                <img src="/media/marker/carrera.png" alt="Carrera Icon">
+                <h2 style="margin-top: 35px; font-size: 1.25rem;">Carreras</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Sección 2: Mapa interactivo -->
 <section class="map-section">
     <div id="map-container">
         <div id="map" style="width: 100%; height: 100vh;"></div>
     </div>
 </section>
-
 
 <!-- Contenedor flotante para detalles del marcador -->
 <div id="popup-details" style="display: none;">
@@ -85,40 +56,6 @@
     </div>
 </div>
 </section>
-
-<!-- <div class="row">
-    <div class="col-md-9">
-        
-    </div>
-    <div class="col-md-3">
-        <form  class="form-inline" method="get" action="{% url 'home' %}">
-            <input type="radio" id="universidad" name="tipo" value="universidad" checked> <i class='bx bx-buildings nav_icon'></i>
-            <input type="radio" id="facultad" name="tipo" value="facultad"> <i class='bx bxs-graduation nav_icon'></i>
-            <input type="radio" id="carrera" name="tipo" value="carrera"> <i class='bx bx-book nav_icon'></i>
-        
-            <input type="text" name="nombre" id="nombre" placeholder="Nombre o descripción" style="width: 100%;">
-            
-            <input type="radio" name="modalidad" value="anual"><i class="bx bx-calendar"></i> Anual
-            <input type="radio" name="modalidad" value="semestral"><i class="bx bx-calendar-check"></i> Semestral
-        
-            <input type="number" name="costo_min" id="costo_min" placeholder="Costo mínimo" style="width: 49%;">
-            <input type="number" name="costo_max" id="costo_max" placeholder="Costo máximo" style="width: 49%;">
-
-           
-            <label for=""><i class='bx bx-map nav_icon'></i>Bucar por distancia  </label>
-            <input type="number" name="rango_km" id="rango_km" style="width: 45%;" placeholder="Rango en km">
-            <input type="hidden" name="lat" id="lat">
-            <input type="hidden" name="lng" id="lng">
-
-        
-            <input type="radio" id="publica" name="tipo_universidad" value="pública" onchange="this.form.submit()"> Pública
-            <input type="radio" id="privada" name="tipo_universidad" value="privada" onchange="this.form.submit()"> Privada
-            <input type="radio" id="ambas" name="tipo_universidad" value="" onchange="this.form.submit()"> Ambas
-        </form>
-    </div>
-</div>
- -->
-
 
 <!-- Sección 3: Slider -->
 <section class="card-slider-section">
@@ -162,28 +99,9 @@
   </div>
 </section>
 
-
-
 <!-- Sección 4: Funcionalidades y guía -->
 <section class="features-section">
-  <div class="features">
-    <strong><h2>Funcionalidades Innovadoras</h2></strong>
-    <div class="feature">
-      <img src="media/imagenes/universidades/uto.jpg" alt="Funcionalidad 1">
-      <b>Filtros Personalizados</b>
-      <p>Utiliza filtros específicos para acotar tu búsqueda según ubicación, tipo de programa, y más, asegurando resultados relevantes y adaptados a tus intereses.</p>
-    </div>
-    <div class="feature">
-      <img src="media/imagenes/universidades/uniorf.png" alt="Funcionalidad 2">
-      <b>Acceso a Datos Actualizados</b>
-      <p>Mantente informado con datos actualizados sobre las universidades y carreras, lo que te permitirá tomar decisiones basadas en la información más reciente.</p>
-    </div>
-    <div class="feature">
-      <img src="media/imagenes/universidades/UPDS.jpg" alt="Funcionalidad 3">
-      <b>Interfaz Intuitiva</b>
-      <p>Nuestra plataforma está diseñada para ser fácil de usar, permitiendo que cualquier usuario pueda navegar y encontrar información sin complicaciones.</p>
-    </div>
-  </div>
+  
   <div class="guide">
     <strong><h2>Guía de uso</h2></strong><br>
     <div class="cards">
@@ -204,19 +122,12 @@
 </section>
 
 
-
-
-
-
-
 <script>
-     // Crear el mapa centrado en las coordenadas iniciales
      const map = L.map('map', {
             zoom: 14,
-            measureControl: false // Desactivamos inicialmente el control integrado
+            measureControl: false 
         }).setView([-17.972, -67.14], 14);
 
-        // Añadir capa base
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 20,
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -224,12 +135,12 @@
 
         // Añadir herramienta de medición personalizada
         const measureControl = L.control.measure({
-            primaryLengthUnit: 'kilometers', // Unidad primaria
-            secondaryLengthUnit: 'meters',  // Unidad secundaria
-            primaryAreaUnit: undefined,    // Desactiva áreas
-            position: 'topright',           // Posición del control
-            activeColor: '#db4a29',        // Color del polígono activo
-            completedColor: '#9b2d14'      // Color del polígono completado
+            primaryLengthUnit: 'kilometers', 
+            secondaryLengthUnit: 'meters',  
+            primaryAreaUnit: undefined,    
+            position: 'topright',          
+            activeColor: '#db4a29',        
+            completedColor: '#9b2d14'     
         });
 
         measureControl.addTo(map);
@@ -264,94 +175,95 @@
     }
 
     const markerGroup = L.layerGroup().addTo(map);
+    const uniLayer = L.layerGroup();
+    const facLayer = L.layerGroup();
+    const carLayer = L.layerGroup();
 
     function addMarkers(data, icon, map) {
         data.forEach(function(item) {
+          if (item.latitud && item.longitud) {
             let marker = L.marker([item.latitud, item.longitud], {icon: icon, title: item.nombre} ).addTo(map);
             marker.on('click', function() {
                 showPopup(item);
             });
              // Añadir el marcador al grupo
             markerGroup.addLayer(marker);
+            if (item.tipo === "Universidad") {
+            uniLayer.addLayer(marker); 
+            } else if (item.tipo === "Facultad") {
+                facLayer.addLayer(marker); 
+            }else if (item.tipo === "Carrera") {
+                carLayer.addLayer(marker); 
+            }
+          }
         });
     }
-
-    
-
+   
     var universidades = {{ universidades_json|safe }};
     var facultades = {{ facultades_json|safe }};
     var carreras = {{ carreras_json|safe }};
+    let uCount = universidades.length;
+    let fCount = facultades.length;
+    let cCount = carreras.length;
 
-    // Definir íconos personalizados para universidades, facultades y carreras (asegúrate de tener los iconos `uIcon`, `fIcon`, `cIcon`)
     addMarkers(universidades, uIcon, map);
     addMarkers(facultades, fIcon, map);
     addMarkers(carreras, cIcon, map);
 
-
 </script>
 
 
-
-
 <script>
-
-    let marker1 = L.marker([{{-17.98 }}, {{-67.11 }}], {
-         draggable: true
-     }).addTo(map);
-
-    map.on('click', function (e) {
-        if (marker1) map.removeLayer(marker1); // Quitar marcador anterior
-        marker1 = L.marker(e.latlng).addTo(map);
-        document.getElementById('lat').value = e.latlng.lat;
-        document.getElementById('lng').value = e.latlng.lng;
-    });
-
-    
-
-  // Añadir control de escala
   L.control.scale({
-            imperial: false, // Mostrar solo en unidades métricas
-            metric: true,    // Habilitar escala métrica
-            maxWidth: 200    // Ancho máximo de la barra de escala
+            imperial: false, 
+            metric: true,    
+            maxWidth: 2000   
         }).addTo(map);
 
+        
     // Añadir el control de búsqueda
     const searchControl = new L.Control.Search({
-        layer: markerGroup,        // Usar el grupo de marcadores
-        position: 'topleft',    
-        propertyName: 'title',     // Buscar en la propiedad 'title'
-        zoom: 18,                  // Zoom al encontrar un marcador
-        marker: false              // No añadir un marcador adicional
+        layer: markerGroup,        
+        position: 'topright',    
+        propertyName: 'title',     
+        zoom: 20,                  
+        marker: false              
     });
+
 
     // Abrir el popup del marcador encontrado
     searchControl.on('search:locationfound', function(e) {
-        e.layer.openPopup(); // Abre el popup del marcador encontrado
+        e.layer.openPopup(); 
     });
 
-    // Añadir el control al mapa
-    map.addControl(searchControl);
 
-    document.addEventListener('DOMContentLoaded', function () {
-        const rangoKm = parseFloat('{{ rango_km|default:"0" }}');
-        const lat = parseFloat('{{ lat|default:"0" }}');
-        const lng = parseFloat('{{ lng|default:"0" }}');
+    const overlays = {
+    "Todas": markerGroup,
+    "Universidades": uniLayer,
+    "Facultades": facLayer,
+    "Carreras": carLayer
+};
+L.control.layers(overlays,null, { position: 'topright',collapsed: false }).addTo(map);
 
-        // Dibujar el círculo si el rango está definido
-        if (rangoKm > 0) {
-            const radiusMeters = rangoKm * 1000; // Convertir a metros
-            const circle = L.circle([lat, lng], {
-                color: 'blue',
-                fillColor: '#add8e6',
-                fillOpacity: 0.4,
-                radius: radiusMeters,
-            }).addTo(map);
+map.addControl(searchControl);
 
-            map.fitBounds(circle.getBounds()); // Ajustar la vista del mapa al círculo
-        }
-    });
+     // Función para animar el conteo
+     function animateCount(element, target) {
+        let start = 0;
+        const increment = target / 100;
+        const interval = setInterval(() => {
+            start += increment;
+            element.textContent = Math.floor(start);
+            if (start >= target) {
+                clearInterval(interval);
+                element.textContent = target;
+            }
+        }, 10);
+    }
 
-    
+    animateCount(document.getElementById('uCount'), uCount);
+    animateCount(document.getElementById('fCount'), fCount);
+    animateCount(document.getElementById('cCount'), cCount);
 </script>
 
 {% endblock %}
