--- a/sig_project/geodata/templates/geodata/carrera_form.html
+++ b/sig_project/geodata/templates/geodata/carrera_form.html
@@ -5,7 +5,7 @@
 </div>
 
     <div class="row form-row">
-        <div class="col-md-7">
+        <div class="col-md-5">
             <form method="POST" class="form-create" enctype="multipart/form-data">
                 {% csrf_token %}
                 <h2>{% if carrera.pk %}Editar{% else %}Crear{% endif %} carrera</h2>
@@ -19,17 +19,20 @@
                 </div>
                 {% endfor %}
                 
-                <!-- Hidden fields for latitude and longitude -->
                 <input type="hidden" id="id_latitud" name="latitud" value="{{ carrera.latitud|default:'' }}">
                 <input type="hidden" id="id_longitud" name="longitud" value="{{ carrera.longitud|default:'' }}">
     
                 <button type="submit" class="btn btn-primary btn-submit">
-                    Guardar <i class="bx bx-plus"></i>
+                    <i class="bx bx-save"> Guardar </i>
                 </button>
             </form>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-7">
+            <div class="alert alert-primary" role="alert">
+                Arrastra el ícono a la ubicación correcta en el mapa.
+              </div>
             <div id="map" class="map-container"></div>
+            <a href="{% url 'carrera_list' %}" style="color:  rgb(0, 115, 255);"><i class="bx bx-arrow-back"></i>Volver a la lista</a>
         </div>
     </div>
 
@@ -55,5 +58,5 @@
 </script>
 
 
-<a href="{% url 'carrera_list' %}" style="color: rgb(0, 208, 255);"><i class="bx bx-arrow-back"></i>Volver a la lista</a>
+
 {% endblock %}
